# floorplan-pipeline

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COORDINATE_DIAGNOSIS.md  PROJECT_REVIEW.md  architecture.md  decisions.md
examples/: input_rooms.json
scripts/: demo.py  make_demo_video.md
src/floorplan_pipeline/: __init__.py  config.py  pipeline.py  resplan_input.py  stages.py
tests/: _world.py  conftest.py  test_artifacts_valid.py  test_golden_endtoend.py  test_golden_pipeline_000.py  test_ifc_validation.py  test_openings_clear.py  test_pipeline_end_to_end.py  test_resplan_input.py  test_stage_contracts.py
tests/golden/pipeline-000/: bom.json  framing.json  ifc_signature.json  member_sequences.json  openings.json  panel_sequence.json  panels.json  summary.json  walls.json
