[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floorplan-pipeline"
version = "0.1.0"
description = "End-to-end orchestrator for the AEC framing pipeline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "aec-schema",
    "wall-extract",
    "panel-decompose",
    "framing-synth",
    "assembly-sequence",
    "aec-ifc-export",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/floorplan_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
